# WorkTimer

./: .gitignore  README.md
WorkTimer/: CMakeLists.txt  appicon.rc  filehandler.cpp  filehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  timerwidget.cpp  timerwidget.h  timerwidget.ui  titleinput.cpp  titleinput.h  titleinput.ui
art/: clock icon.aseprite
